# tether

./: .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION.md  INSTALL.md  INTEGRATION-PLAN.md  LICENSE  README.md  REVIEW.md  agent-loop.sh  hardware.md  plan.md  research.md  tetherd.toml.example
.github/: dependabot.yml
firmware/m5/components/aes_link/: CMakeLists.txt
firmware/m5/components/aes_link/include/: aes_link.h
firmware/m5/components/aes_link/src/: aes_link.cpp
firmware/m5/components/aes_link/test/: test_aes_link.cpp
firmware/m5/components/audio_capture/: CMakeLists.txt
firmware/m5/components/audio_capture/include/: audio_capture.h
firmware/m5/components/audio_capture/src/: audio_capture.cpp
firmware/m5/components/audio_capture/test/: test_audio_capture.cpp
firmware/m5/components/buttons/: CMakeLists.txt
firmware/m5/components/buttons/include/: buttons.h
firmware/m5/components/buttons/src/: buttons.cpp
firmware/m5/components/buttons/test/: test_buttons.cpp
firmware/m5/components/conv_db/: CMakeLists.txt
firmware/m5/components/conv_db/include/: conv_db.h
firmware/m5/components/conv_db/src/: conv_db.cpp
firmware/m5/components/conv_db/test/: test_conv_db.cpp
firmware/m5/components/conv_manager/: CMakeLists.txt
firmware/m5/components/conv_manager/include/: conv_manager.h
firmware/m5/components/conv_manager/src/: conv_manager.cpp
firmware/m5/components/conv_manager/test/: test_conv_manager.cpp
firmware/m5/components/crash_log/: CMakeLists.txt
firmware/m5/components/crash_log/include/: crash_log.h
firmware/m5/components/crash_log/src/: crash_log.cpp
firmware/m5/components/crash_log/test/: test_crash_log.cpp
firmware/m5/components/epd/: CMakeLists.txt
firmware/m5/components/epd/include/: epd.h
firmware/m5/components/epd/src/: epd_font.h  screens.cpp
firmware/m5/components/epd/test/: gen_epd_goldens.cpp  test_epd_render.cpp
firmware/m5/components/i2s_amp/: CMakeLists.txt
firmware/m5/components/i2s_amp/include/: i2s_amp.h  playback.h
firmware/m5/components/i2s_amp/src/: i2s_amp.cpp
firmware/m5/components/i2s_amp/test/: test_i2s_amp.cpp
firmware/m5/components/i2s_mic/: CMakeLists.txt
firmware/m5/components/i2s_mic/include/: i2s_mic.h
firmware/m5/components/i2s_mic/src/: i2s_mic.cpp
firmware/m5/components/i2s_mic/test/: test_i2s_mic.cpp
firmware/m5/components/littlefs_vfs/: CMakeLists.txt
firmware/m5/components/littlefs_vfs/include/: littlefs_vfs.h
firmware/m5/components/littlefs_vfs/src/: littlefs_vfs.cpp  littlefs_vfs_host.cpp
firmware/m5/components/littlefs_vfs/test/: test_littlefs_vfs.cpp
firmware/m5/components/lora_sx1262/: CMakeLists.txt
firmware/m5/components/lora_sx1262/include/: frequency_hopping.h  lora_sx1262.h
firmware/m5/components/lora_sx1262/src/: lora_sx1262.cpp  lora_sx1262_host.cpp
firmware/m5/components/lora_sx1262/test/: test_lora_sx1262.cpp
firmware/m5/components/nvs/: CMakeLists.txt
firmware/m5/components/nvs/include/: nvs.h
firmware/m5/components/nvs/src/: nvs.cpp
firmware/m5/components/nvs/test/: test_nvs.cpp
firmware/m5/components/opus_dec/: CMakeLists.txt
firmware/m5/components/opus_dec/include/: opus_dec.h
firmware/m5/components/opus_dec/src/: opus_dec.cpp
firmware/m5/components/opus_dec/test/: test_opus_dec.cpp
firmware/m5/components/opus_enc/: CMakeLists.txt
firmware/m5/components/opus_enc/include/: opus_enc.h
firmware/m5/components/opus_enc/src/: opus_enc.cpp
firmware/m5/components/opus_enc/test/: test_opus_enc.cpp
firmware/m5/components/ota/: CMakeLists.txt
firmware/m5/components/ota/include/: ota.h  ota_lora.h
firmware/m5/components/ota/src/: ota.cpp
firmware/m5/components/ota/test/: test_ota.cpp
firmware/m5/components/pca9557/: CMakeLists.txt
firmware/m5/components/pca9557/include/: pca9557.h
firmware/m5/components/pca9557/src/: pca9557.cpp
firmware/m5/components/power_mgmt/: CMakeLists.txt
firmware/m5/components/power_mgmt/include/: power_mgmt.h
firmware/m5/components/power_mgmt/src/: power_mgmt.cpp
firmware/m5/components/power_mgmt/test/: test_power_mgmt.cpp  test_power_mgmt_phase8.cpp  test_power_mgmt_state.h
firmware/m5/components/protocol/: CMakeLists.txt
firmware/m5/components/protocol/include/: protocol.h
firmware/m5/components/protocol/src/: protocol.cpp
firmware/m5/components/protocol/test/: test_protocol.cpp
firmware/m5/components/psram_ring/: CMakeLists.txt
firmware/m5/components/psram_ring/include/: psram_ring.h
firmware/m5/components/psram_ring/src/: psram_ring.cpp
firmware/m5/components/psram_ring/test/: test_psram_ring.cpp
firmware/m5/components/ptt/: CMakeLists.txt
firmware/m5/components/ptt/include/: ptt.h
firmware/m5/components/ptt/src/: ptt.cpp
firmware/m5/components/ptt/test/: test_ptt_state.cpp
firmware/m5/components/radio_task/: CMakeLists.txt
firmware/m5/components/radio_task/include/: radio_task.h
firmware/m5/components/radio_task/src/: radio_task.cpp
firmware/m5/components/radio_task/test/: test_radio_task.cpp
firmware/m5/components/sd_card/: CMakeLists.txt
firmware/m5/components/sd_card/include/: sd_card.h
firmware/m5/components/sd_card/src/: sd_card.cpp  sd_card_host.cpp
firmware/m5/components/sd_card/test/: test_sd_card.cpp
firmware/m5/components/spi_bus/: CMakeLists.txt
firmware/m5/components/spi_bus/include/: spi_bus.h
firmware/m5/components/spi_bus/src/: spi_bus.cpp  spi_bus_host.cpp
firmware/m5/components/spi_bus/test/: test_spi_bus.cpp
firmware/m5/components/ssd1306/: CMakeLists.txt
firmware/m5/components/ssd1306/include/: ssd1306.h
firmware/m5/components/ssd1306/src/: ssd1306.cpp
firmware/m5/components/storage_flush/: CMakeLists.txt
firmware/m5/components/ui_state/: CMakeLists.txt
firmware/m5/components/watchdog/: CMakeLists.txt
firmware/m5/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
firmware/m5/test_host/: CMakeLists.txt  test_board_t3s3_mvsr.cpp
firmware/m5/test_host/freertos_shim/: CMakeLists.txt  freertos_shim.cpp  freertos_shim.h
firmware/m5/test_host/unity/: CMakeLists.txt  unity.c  unity.h
(+212 files in other folders)
